# tccm-homeworks

./: AUTHORS
project1/: CMakeLists.txt  INSTALL.md  LICENSE  README.md
project1/src/: info_src  mp2.c
project1/test/: out  test_info
project3/: INSTALL.md  LICENSE.md  READ_ME.md  final_Dyna.f90
project3/src/: info_src
project3/tests/: info_tests  trajectories.xyz
